<resources>
    <string name="app_name">Samojlov_AV_HomeworkAndroidStudio_number_4.1</string>
    <string name="heading1">Калькулятор времени</string>
    <string name="operandET">время: h m s</string>
    <string name="sumButton">+</string>
    <string name="difButton">-</string>
    <string name="result">Результат</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="toolbar_title">Калькулятор времени</string>
    <string name="toolbar_subtitle">версия 1.0</string>
    <string name="toast_reset">Данные очищены</string>
    <string name="toast_exit">Приложение закрыто</string>
</resources>