<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading1TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/heading1"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading1TV"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/firstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4pt"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/operandET"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="22sp">

        </EditText>

        <EditText
            android:id="@+id/secondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4pt"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/operandET"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="22sp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/sumButtonBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sumButton"
            android:textSize="22sp">

        </Button>

        <Button
            android:id="@+id/difButtonBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/difButton"
            android:textSize="22sp">

        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="36sp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutChoiceOperand"
        app:layout_constraintVertical_bias="0.1">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayoutResetExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.1"
        >

        <Button
            android:id="@+id/resetButtonBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="22sp">

        </Button>

        <Button
            android:id="@+id/exitButtonBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textSize="22sp">

        </Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>